--- a/front-end-pages/admin-pages/classes-tab/admin-classes.html
+++ b/front-end-pages/admin-pages/classes-tab/admin-classes.html
@@ -10,6 +10,13 @@
 ?>
 
 <body style="background-color: #EBEBEB">
+
+	<script type="text/javascript">
+	    jQuery(".delete-class").click(function(){
+	        jQuery("#deleteModal").modal('show');
+	    });
+	</script>
+	
 	<br>
 	<div class="row">
 		<div class="col-md-5">
@@ -28,7 +35,7 @@
 		</div>
 
 		<div class="col-md-6">
-			<table class="table table-bordered table-striped table-hover" style="background-color: white">
+			<table class="table table-bordered table-striped" style="background-color: white">
 				<tr>
 					<th></th>
 					<th>Class Title</th>
@@ -37,28 +44,28 @@
 				</tr>
 
 				<tr>
-					<th style="text-align: center"><i class="fa fa-trash" aria-hidden="true"></i></th>
+					<th style="text-align: center"><a href="#deleteModal" class="delete-class" type="button" data-toggle="modal"><i class="fa fa-trash" aria-hidden="true"></i></a></th>
 					<td>Power Tools 101</td>
 					<td>3/30/2017</td>
 					<td>12/20</td>
 				</tr>
 
 				<tr>
-					<th style="text-align: center"><i class="fa fa-trash" aria-hidden="true"></i></th>
+					<th style="text-align: center"><a href="#deleteModal" class="delete-class" type="button" data-toggle="modal"><i class="fa fa-trash" aria-hidden="true"></i></a></th>
 					<td>Intro to Raspberry Pi</td>
 					<td>2/30/2017</td>
 					<td>10/15</td>
 				</tr>
 
 				<tr>
-					<th style="text-align: center"><i class="fa fa-trash" aria-hidden="true"></i></th>
+					<th style="text-align: center"><a href="#deleteModal" class="delete-class" type="button" data-toggle="modal"><i class="fa fa-trash" aria-hidden="true"></i></a></th>
 					<td>Build Your Own Skateboard</td>
 					<td>4/2/2017</td>
 					<td>8/10</td>
 				</tr>
 
 				<tr>
-					<th style="text-align: center"><i class="fa fa-trash" aria-hidden="true"></i></th>
+					<th style="text-align: center"><a href="#deleteModal" class="delete-class" type="button" data-toggle="modal"><i class="fa fa-trash" aria-hidden="true"></i></a></th>
 					<td>Power Tools 102</td>
 					<td>3/30/2017</td>
 					<td>12/20</td>
@@ -66,4 +73,26 @@
 			</table>
 		</div>
 	</div>
+
+	<!-- DELETE CLASS MODAL -->
+	<div class="modal fade" tabindex="-1" role="dialog" id="deleteModal">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title">Delete Class</h4>
+				</div>
+
+				<div class="modal-body">
+					<p>Are you sure you want to delete this class?</p>
+				</div>
+
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary">Delete</button>
+				</div>
+			</div><!-- /.modal-content -->
+		</div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
+
 </body>
