--- a/front-end-pages/admin-pages/access-tab/admin-access.html
+++ b/front-end-pages/admin-pages/access-tab/admin-access.html
@@ -1,80 +1,66 @@
-<!DOCTYPE html>
-<html>
-	
-	<head>
-		<?php
-                echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-access-ha.css', __FILE__ ) . '">' . "\n";
-                ?>
+<?php
+    wp_enqueue_style( 'bootstrap', '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css');
 
-		<title>
-			Access Page for Admin
-		</title>
-	</head>
-	
-	<body>
-        <section class="mas-container">
-            <div class="mas-left">
-                <label for="group" class="mas">Membership Group</label>
-                <select id="group" name="group" class="mas" >
-                  <option value="basic">Basic</option>
-                  <option value="family">Family</option>
-                  <option value="circularSaw">Circular Saw Certified</option>
-                </select>
-            </div>
+    wp_enqueue_script( 'jquery', '//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js');
+    wp_enqueue_script('bootstrap', '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js');
+    wp_enqueue_script('angular', '//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js');
 
-            <div class="mas-right">
-                <table class="mas">
-                    <th class="mas" colspan="4">Permissions</th>
-                    <tr class="mas">
-                        <td class="mas">	
-                            <p>&#9989</p>
-                        </td>
-                        <td class="mas">	
-                            Exterior Doors
-                        </td>
-                        <td class="mas">	
-                            8:00am - 9:00pm
-                        </td>
-                        <td class="mas">	
-                            <button class="mas-edit" type="edit">Edit</button>
-                        </td>
-                    </tr>
-                    <tr class="mas">
-                        <td class="mas">	
-                            <p>&#9989</p>
-                        </td>
-                        <td class="mas">	
-                            Interior Doors
-                        </td>
-                        <td class="mas">	
-                            8:00am - 9:00pm
-                        </td>
-                        <td class="mas">	
-                            <button class="mas-edit" type="edit">Edit</button>
-                        </td>
-                    </tr>
-                    <tr class="mas">
-                        <td class="mas">	
-                            <p>&#9744</p>
-                        </td>
-                        <td class="mas">	
-                            Circular Saw
-                        </td>
-                        <td class="mas">	
-                            8:00am - 9:00pm
-                        </td>
-                        <td class="mas">	
-                            <button class="mas-edit" type="edit">Edit</button>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </section>
-            
-        <div class="mas-right" style="margin-top:15px">
-            <button class="mas-save" type="submit">Save Changes</button>
+    echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-access-ha.css', __FILE__ ) . '">' . "\n";
+?>
+
+<body>
+    <section class="mas-container">
+        <div class="mas-left">
+            <label for="group" class="mas">Membership Group</label>
+            <select id="group" name="group" class="mas" >
+              <option value="basic">Basic</option>
+              <option value="family">Family</option>
+              <option value="circularSaw">Circular Saw Certified</option>
+            </select>
         </div>
-        
-	</body>
 
-</html>
+        <div class="mas-right">
+            <table class="mas">
+                <th class="mas" colspan="4">Permissions</th>
+                <tr class="mas">
+                    <td class="mas">	
+                        <div class="checkbox">
+                          <label><input class="form-control" type="checkbox" value="" checked></label>
+                        </div>
+                    </td>
+                    <td class="mas">	
+                        Exterior Doors
+                    </td>
+                    <td class="mas">
+                        <span>
+                            <label><input class="form-control" maxlength="2" name="hour_start" id="hour_start" size="2"></label>
+                            :
+                            <label><input class="form-control" maxlength="2" name="min_start" id="min_start" size="2"></label>
+                            <label>
+                                <select class="form-control" name="period_start" id="period_start">
+                                    <option value="AM">am</option>
+                                    <option value="PM">pm</option>
+                                </select>
+                            </label>
+                             - 
+                            <label><input class="form-control" maxlength="2" name="hour_end" id="hour_end" size="2"></label>
+                            :
+                            <label><input class="form-control" maxlength="2" name="min_end" id="min_end" size="2"></label>
+                            <label>
+                                <select class="form-control" name="period_end" id="period_end">
+                                    <option value="AM">am</option>
+                                    <option value="PM">pm</option>
+                                </select>
+                            </label>
+                        </span>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </section>
+
+    <div class="mas-right" style="margin-top:15px">
+        <button class="mas-save" type="submit">Save Changes</button>
+    </div>
+
+</body>
