--- a/front-end-pages/admin-pages/access-tab/admin-access.html
+++ b/front-end-pages/admin-pages/access-tab/admin-access.html
@@ -33,9 +33,9 @@
                     </td>
                     <td width="40%">
                         <span>
-                        <label style="width: 100px"><input type="time" style="" class="form-control" id="start" placeholder="Start Time"></label>
+                        <label style="width: 120px"><input type="time" value="16:32" class="form-control" id="start"></label>
                         - 
-                        <label style="width: 100px"><input type="time" style="" class="form-control" id="end" placeholder="End Time"></label>
+                        <label style="width: 120px"><input type="time" value="16:32" class="form-control" id="end"></label>
                         </span>
                     </td>
                 </tr>
