--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -1,3 +1,10 @@
+<?php
+
+// Preventing loading direct from browser
+defined( 'ABSPATH' ) or die();
+
+?>
+
 <!DOCTYPE html>
 <html>
 	
@@ -20,7 +27,7 @@
 
 		<table class="mas">
 			<tr class="mas">
-                <form action="<?php echo plugins_url( 'integrations-manager.php', __FILE__ ) ?>" method="post">
+                <form action="<?php echo plugin_dir_path(__FILE__) . 'front-end-pages/admin-pages/integrations-tab/integrations-manager.php') ?>" method="post">
 				    <td class="mas">	
 					  <div id="slack">
 					  	<h1 class="mas">Stripe</h1>
@@ -39,7 +46,7 @@
 			</tr>
 
 			<tr class="mas">
-                <form action="<?php echo plugins_url( 'integrations-manager.php', __FILE__ ) ?>" method="post">
+                <form action="<?php echo plugin_dir_path(__FILE__) . 'front-end-pages/admin-pages/integrations-tab/integrations-manager.php ?>" method="post">
                     <td class="mas">
                         <div id="G Suite">
                             <h1 class="mas">GSuite for Non-Profits</h1>
@@ -55,7 +62,4 @@
 			</tr>
 		</table>
 	</body>
-
 </html>
-
-<!-- How to populate this? Is there a list of integrations somewhere? I dunno... -->
