Attempting to prevent access to PHP files from the browser

--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -51,7 +51,7 @@ defined( 'ABSPATH' ) or die();
                         <div id="G Suite">
                             <h1 class="mas">GSuite for Non-Profits</h1>
                             <label for="gsuite-json" class="mas">GSuite Access JSON:</label>
-                            <textarea rows="10" cols="60" id="gsuite-json" name="gsuite-json" class="mas"><?php echo  getGSuiteCredentials() ?></textarea>
+                            <textarea rows="10" cols="60" id="gsuite-json" name="gsuite-json" class="mas"><?php echo  getGSuiteCredentials(); ?></textarea>
                         </div>
 
                     </td>
