Attempting to prevent access to PHP files from the browser

--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -13,7 +13,7 @@ include __DIR__ . '/../../resources/StripeAPI.php';
 
 		<table class="mas">
 			<tr class="mas">
-                <form action="<?php echo plugin_dir_path(__FILE__) . 'front-end-pages/admin-pages/integrations-tab/integrations-manager.php') ?>" method="post">
+                <form action="<?php echo plugin_dir_path(__FILE__) . 'front-end-pages/admin-pages/integrations-tab/integrations-manager.php' ?>" method="post">
 				    <td class="mas">	
 					  <div id="slack">
 					  	<h1 class="mas">Stripe</h1>
