Attempting to prevent access to PHP files from the browser

--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -32,7 +32,7 @@ include __DIR__ . '/../../resources/StripeAPI.php';
 			</tr>
 
 			<tr class="mas">
-                <form action="<?php echo plugin_dir_path(__FILE__) . 'front-end-pages/admin-pages/integrations-tab/integrations-manager.php ?>" method="post">
+                <form action="<?php echo plugin_dir_path(__FILE__) . 'front-end-pages/admin-pages/integrations-tab/integrations-manager.php' ?>" method="post">
                     <td class="mas">
                         <div id="G Suite">
                             <h1 class="mas">GSuite for Non-Profits</h1>
