--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -3,6 +3,7 @@
 // Preventing loading direct from browser
 defined( 'ABSPATH' ) or die();
 
+echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-integrations.css', __FILE__ ) . '">' . "\n";
 
 include __DIR__ . '/../../resources/GSuiteAPI.php';
 include __DIR__ . '/../../resources/StripeAPI.php';
@@ -13,7 +14,7 @@ include __DIR__ . '/../../resources/StripeAPI.php';
 
 		<table class="mas">
 			<tr class="mas">
-                <form action="<?php echo plugin_dir_path(__FILE__) . 'front-end-pages/admin-pages/integrations-tab/integrations-manager.php' ?>" method="post">
+                <form action="<?php echo plugins_url( 'integrations-manager.php', __FILE__ ) ?>" method="post">
 				    <td class="mas">	
 					  <div id="slack">
 					  	<h1 class="mas">Stripe</h1>
@@ -32,12 +33,12 @@ include __DIR__ . '/../../resources/StripeAPI.php';
 			</tr>
 
 			<tr class="mas">
-                <form action="<?php echo plugin_dir_path(__FILE__) . 'front-end-pages/admin-pages/integrations-tab/integrations-manager.php' ?>" method="post">
+                <form action="<?php echo plugins_url( 'integrations-manager.php', __FILE__ ) ?>" method="post">
                     <td class="mas">
                         <div id="G Suite">
                             <h1 class="mas">GSuite for Non-Profits</h1>
                             <label for="gsuite-json" class="mas">GSuite Access JSON:</label>
-                            <textarea rows="10" cols="60" id="gsuite-json" name="gsuite-json" class="mas"><?php echo  getGSuiteCredentials(); ?></textarea>
+                            <textarea rows="10" cols="60" id="gsuite-json" name="gsuite-json" class="mas"><?php echo  getGSuiteCredentials() ?></textarea>
                         </div>
 
                     </td>
@@ -48,4 +49,7 @@ include __DIR__ . '/../../resources/StripeAPI.php';
 			</tr>
 		</table>
 	</body>
+
 </html>
+
+<!-- How to populate this? Is there a list of integrations somewhere? I dunno... -->
