Attempting to prevent access to PHP files from the browser

--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -14,7 +14,7 @@ include __DIR__ . '/../../resources/StripeAPI.php';
 
 		<table class="mas">
 			<tr class="mas">
-                <form action="<?php echo esc_url( admin_url('integrations-manager.php'); ?>" method="post">
+                <form action="<?php echo esc_url( admin_url('integrations-manager.php')); ?>" method="post">
 				    <td class="mas">	
 					  <div id="slack">
 					  	<h1 class="mas">Stripe</h1>
@@ -33,7 +33,7 @@ include __DIR__ . '/../../resources/StripeAPI.php';
 			</tr>
 
 			<tr class="mas">
-                <form action="<?php echo esc_url( admin_url('integrations-manager.php'); ?>" method="post">
+                <form action="<?php echo esc_url( admin_url('integrations-manager.php')); ?>" method="post">
                     <td class="mas">
                         <div id="G Suite">
                             <h1 class="mas">GSuite for Non-Profits</h1>
