--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -36,7 +36,7 @@ include __DIR__ . 'integrations-manager.php';
 			</tr>
 
 			<tr class="mas">
-                <form action="<?php echo admin_url( 'admin.php' ?>" method="post">
+                <form action="<?php echo admin_url( 'admin.php') ?>" method="post">
                     <td class="mas">
                         <div id="G Suite">
                             <h1 class="mas">GSuite for Non-Profits</h1>
