Attempting to prevent access to PHP files from the browser

--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -15,7 +15,7 @@ include __DIR__ . 'integrations-manager.php';
 
 		<table class="mas">
 			<tr class="mas">
-                <form action="<?php echo admin_url( 'admin.php' ); ?>" method="post">
+                <form action="<?php echo admin_url( 'admin-post.php' ); ?>" method="post">
 				    <td class="mas">	
 					  <div id="slack">
 					  	<h1 class="mas">Stripe</h1>
@@ -36,7 +36,7 @@ include __DIR__ . 'integrations-manager.php';
 			</tr>
 
 			<tr class="mas">
-                <form action="<?php echo admin_url( 'admin.php') ?>" method="post">
+                <form action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
                     <td class="mas">
                         <div id="G Suite">
                             <h1 class="mas">GSuite for Non-Profits</h1>
