Attempting to prevent access to PHP files from the browser

--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -7,7 +7,7 @@ echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-integ
 
 include __DIR__ . '/../../resources/GSuiteAPI.php';
 include __DIR__ . '/../../resources/StripeAPI.php';
-include __DIR__ . 'integrations-manager.php';
+include 'integrations-manager.php';
 
 ?>
 	
