--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -5,8 +5,8 @@ defined( 'ABSPATH' ) or die();
 
 echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-integrations.css', __FILE__ ) . '">' . "\n";
 
-include __DIR__ . '/../../resources/GSuiteAPI.php';
-include __DIR__ . '/../../resources/StripeAPI.php';
+include_once __DIR__ . '/../../resources/GSuiteAPI.php';
+include_once __DIR__ . '/../../resources/StripeAPI.php';
 include 'integrations-manager.php';
 
 ?>
