Attempting to prevent access to PHP files from the browser

--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -16,7 +16,7 @@ include 'integrations-manager.php';
 		<table class="mas">
 			<tr class="mas">
                 <form action="<?php echo admin_url( 'admin-post.php' ); ?>" method="post">
-                    <input type="hidden" name="action" value="update_keys">
+                     <input type="hidden" name="action" value="add_foobar">
                     
 				    <td class="mas">	
 					  <div id="slack">
