Bootstrap member table

--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -1,14 +1,19 @@
 <?php
-echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-members-table.css', __FILE__ ) . '">' . "\n";
+    wp_enqueue_style( 'bootstrap', '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css');
+    wp_enqueue_script('bootstrap', '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js');
+	
+	echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-members-table.css', __FILE__ ) . '">' . "\n";
 ?>
-<table class="member-table">
-	<tr>
-		<th></th>
-		<th>Name</th>
-		<th>Email</th>
-		<th>Member Since</th>
-		<th>Membership Plan</th>
-		<th>Subscription Status</th>
-	</tr>
-<?php include 'admin-member-data.php'; ?>
-</table>
+<body style="background-color: #EBEBEB">
+	<table class="table table-striped table-bordered">
+		<tr>
+			<th></th>
+			<th>Name</th>
+			<th>Email</th>
+			<th>Member Since</th>
+			<th>Membership Plan</th>
+			<th>Subscription Status</th>
+		</tr>
+	<?php include 'admin-member-data.php'; ?>
+	</table>
+</body>
