bugfix and fix indents

--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -23,31 +23,30 @@ if (!empty($stripe_id)) {
 }
 
 ?>
-		<table class="mas">
-			<tr>
-				<th colspan="3" class="mas">
-					<div id="breadcrumb" class="mas-breadcrumb">
+        <table class="mas">
+            <tr>
+                <th colspan="3" class="mas">
+                    <div id="breadcrumb" class="mas-breadcrumb">
                         <a href="admin.php?page=mas-plugin&content=1" class="mas">Members</a> >> <?php echo $user->getName()->getFullName();?>
-					</div>
-				</th>
-			</tr>
+                    </div>
+                </th>
+            </tr>
 
-			<tr>
-				<td class="mas">	
-					<form>
+            <tr>
+                <td class="mas">
+                    <form>
 
-					  <div id="name">
-					    <label for="firstName" class="mas">First Name:</label>
-					    <input type="text" id="firstName" name="firstName" class="mas" value="<?php echo $user->getName()->getGivenName();?>">
-					    <br>
+                      <div id="name">
+                        <label for="firstName" class="mas">First Name:</label>
+                        <input type="text" id="firstName" name="firstName" class="mas" value="<?php echo $user->getName()->getGivenName();?>">
+                        <br>
 
-					    <label class="mas">Last Name:</label>
-					    <input type="text" id="lastName" name="lastName" class="mas" value="<?php echo $user->getName()->getFamilyName();?>">
-					  </div>
-					</form>
+                        <label class="mas">Last Name:</label>
+                        <input type="text" id="lastName" name="lastName" class="mas" value="<?php echo $user->getName()->getFamilyName();?>">
+                      </div>
+                    </form>
 
-<?php
-                    if (!empty($stripe_id)) {
+<?php if (!empty($card)) {
                     echo <<<END
                     <br>
                     <form action="update-card.php" method="POST">
@@ -64,16 +63,13 @@ END;
                     </form>
 END2;
 } ?>
-				</td>
-
-				<td class="mas">
-					<?php
-						echo '<img class="mas" src="' . plugins_url( '../../../images/female-placeholder.png', __FILE__ ) . '" id="profilePic" alt="Profile Picture">' . "\n";
-					?>
-					<br> 
-					<button class="mas-save" type="submit">Save Changes</button>
-				</td>
-
-			</tr>
-
-		</table>
+                </td>
+                <td class="mas">
+                    <?php
+                        echo '<img class="mas" src="' . plugins_url( '../../../images/female-placeholder.png', __FILE__ ) . '" id="profilePic" alt="Profile Picture">' . "\n";
+                    ?>
+                    <br>
+                    <button class="mas-save" type="submit">Save Changes</button>
+                </td>
+            </tr>
+        </table>
