--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -1,26 +1,20 @@
-<!DOCTYPE html>
-<html>
-	
-	<head>
-		<?php
-                echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-integrations.css', __FILE__ ) . '">' . "\n";
-                ?>
+<?php
 
-		<title>
-			Integrations Page for Admin
-		</title>
-	</head>
-    
-    <?php
-        include __DIR__ . '/../../resources/GSuiteAPI.php';
-        include __DIR__ . '/../../resources/StripeAPI.php';
-    ?>
+// Preventing loading direct from browser
+defined( 'ABSPATH' ) or die();
+
+echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-integrations.css', __FILE__ ) . '">' . "\n";
+
+include_once __DIR__ . '/../../resources/GSuiteAPI.php';
+include_once __DIR__ . '/../../resources/StripeAPI.php';
+
+?>
 	
 	<body>
 
 		<table class="mas">
 			<tr class="mas">
-                <form action="<?php echo plugins_url( 'integrations-manager.php', __FILE__ ) ?>" method="post">
+                <form action="<?php echo admin_url( 'admin-post.php' ); ?>" method="post">
 				    <td class="mas">	
 					  <div id="slack">
 					  	<h1 class="mas">Stripe</h1>
@@ -31,6 +25,7 @@
 					    <input type="text" id="stripe-private" name="stripe-private" class="mas" value="<?php echo getStripeSecret()?>">
 					  </div>
                     </td>
+                    <input type="hidden" name="action" value="update_keys">
 
                     <td class="mas">
                         <input id="slack-save" class="mas-save" type="submit" value="Save Changes">
@@ -39,15 +34,16 @@
 			</tr>
 
 			<tr class="mas">
-                <form action="<?php echo plugins_url( 'integrations-manager.php', __FILE__ ) ?>" method="post">
+                <form action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
                     <td class="mas">
                         <div id="G Suite">
                             <h1 class="mas">GSuite for Non-Profits</h1>
                             <label for="gsuite-json" class="mas">GSuite Access JSON:</label>
                             <textarea rows="10" cols="60" id="gsuite-json" name="gsuite-json" class="mas"><?php echo  getGSuiteCredentials() ?></textarea>
                         </div>
-
                     </td>
+                    <input type="hidden" name="action" value="update_keys">
+
                     <td class="mas">
                         <input id="gsuite-save" class="mas-save" type="submit" value="Save Changes">
                     </td>
