--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -3,8 +3,8 @@
     wp_enqueue_script('bootstrap', '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js');
     wp_enqueue_script('angular', '//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js');
 
-	// Preventing loading direct from browser
-	defined( 'ABSPATH' ) or die();
+    // Preventing loading direct from browser
+    defined( 'ABSPATH' ) or die();
 
     echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-integrations.css', __FILE__ ) . '">' . "\n";
 
@@ -14,52 +14,56 @@
 
 <body style="background-color: #EBEBEB">
 
-	<br>
+    <br>
 
-	<div class="container">
-		<table class="table table-striped table-bordered">
-			<tr>
-				<form action="<?php echo plugins_url( 'integrations-manager.php', __FILE__ ) ?>" method="post">
-					<td>
-						<h3>Slack</h3>
-					</td>
+    <div class="container">
+        <table class="table table-striped table-bordered">
+            <tr>
+                <form action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
+                    <td>
+                        <h3>Slack</h3>
+                    </td>
 
-					<td>
-						<div id="slack">
-							<label for="stripe-public">Stripe Public Key:</label>
-							<input type="text" id="stripe-public" name="stripe-public" value="<?php echo getStripePublic()?>">
+                    <td>
+                        <div id="slack">
+                            <label for="stripe-public">Stripe Public Key:</label>
+                            <input type="text" id="stripe-public" name="stripe-public" value="<?php echo getStripePublic()?>">
 
-							<br><br>
+                            <br><br>
 
-							<label for="stripe-private">Stripe Private Key:</label>
-							<input type="text" id="stripe-private" name="stripe-private" value="<?php echo getStripeSecret()?>">							
-						</div>
-					</td>
+                            <label for="stripe-private">Stripe Private Key:</label>
+                            <input type="text" id="stripe-private" name="stripe-private" value="<?php echo getStripeSecret()?>">
+                        </div>
+                    </td>
 
-					<td style="text-align: center">
-						<button class="btn mas-save">Save Changes</button>
-					</td>
-				</form>
-			</tr>
+                    <input type="hidden" name="action" value="update_keys">
 
-			<tr>
-				<form action="<?php echo plugins_url( 'integrations-manager.php', __FILE__ ) ?>" method="post">
-					<td>
-						<h3>GSuite for <br> Non-Profits</h3>
-					</td>
+                    <td style="text-align: center">
+                        <button class="btn mas-save">Save Changes</button>
+                    </td>
+                </form>
+            </tr>
 
-					<td>
-						<div id="gsuite">
-							<label for="gsuite-json">GSuite Access JSON:</label>
-							<textarea id="gsuite-json" name="gsuite-json" rows="10" cols="60"><?php echo  getGSuiteCredentials() ?></textarea>
-						</div>
-					</td>
+            <tr>
+                <form action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
+                    <td>
+                        <h3>GSuite</h3>
+                    </td>
 
-					<td style="text-align: center">
-						<button class="btn mas-save">Save Changes</button>
-					</td>
-				</form>
-			</tr>
-		</table>
-	</div>
+                    <td>
+                        <div id="gsuite">
+                            <label for="gsuite-json">GSuite Access JSON:</label>
+                            <textarea id="gsuite-json" name="gsuite-json" rows="10" cols="60"><?php echo getGSuiteCredentials() ?></textarea>
+                        </div>
+                    </td>
+
+                    <input type="hidden" name="action" value="update_keys">
+
+                    <td style="text-align: center">
+                        <button class="btn mas-save">Save Changes</button>
+                    </td>
+                </form>
+            </tr>
+        </table>
+    </div>
 </body>
