Add back body tag

--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -41,6 +41,8 @@
             });
       </script>
 
+      <body ng-app="memberProfile" ng-controller="DemoCtrl"> 
+
        <div class="mas-title">
             Welcome, Dana Koutsky!
        </div>
