change body tag to div

--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -41,7 +41,7 @@
             });
       </script>
 
-      <body ng-app="memberProfile" ng-controller="DemoCtrl"> 
+      <div ng-app="memberProfile" ng-controller="DemoCtrl"> 
 
        <div class="mas-title">
             Welcome, Dana Koutsky!
@@ -117,3 +117,4 @@
 
           </div>
         </div>
+       </div>
